@@ -1,3 +1,7 @@
+Sun Jul  8 00:01:21 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>
+
+	* libxslt/variables.c: tryingt to fix a problem raised by Norm
+
 Sat Jul  7 23:19:09 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>
 
 	* config.h.in configure.in: added gettimeofday() check
